Add source link to original recipe. Fix typo

--- a/recipes/spanish_rice.html
+++ b/recipes/spanish_rice.html
@@ -12,7 +12,8 @@
         <h2>Instant Pot Spanish Rice</h2>
         <p>Spanish rice, also known as Mexican rice, can be a bit difficult 
             to get right. With this instant pot recipe, it comes out 
-            perfect every time with minimal effort.</p>
+            perfect every time with minimal effort. Sourced 
+            from <a href="https://amindfullmom.com/instant-pot-spanish-rice/">amindfullmom.com</a> </p>
         
         <h3>Ingredients</h3>
         <ul>
@@ -31,7 +32,7 @@
         <ol>
             <li>Turn instant pot to saute</li>
             <li>Add in olive oil and onions. Saute for 2-3 minutes</li>
-            <li>Prepare and rinse rise in strainer</li>
+            <li>Prepare and rinse rice in strainer</li>
             <li>Add in chicken stock once onions are soft. Turn off instant pot</li>
             <li>Add in seasonings and stir</li>
             <li>Add in rice and top with tomato sauce. Do not stir</li>
