--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <ul>
             <li><a href="recipes/spanish_rice.html">Spanish Rice</a></li>
+            <li><a href="recipes/oven_ribs.html">Oven-Baked Ribs</a></li>
         </ul>
     </body>
 </html>
