--- a/recipes/spanish_rice.html
+++ b/recipes/spanish_rice.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Spanish Rice</h1>
-        <img src="../images/spanishrice.jpg">
+        <img src="../images/spanishrice.jpg" alt"Perfect spanish rice">
 
         <h2>Instant Pot Spanish Rice</h2>
         <p>Spanish rice, also known as Mexican rice, can be a bit difficult 
