--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="recipes/spanish_rice.html">Spanish Rice</a></li>
             <li><a href="recipes/oven_ribs.html">Oven-Baked Ribs</a></li>
+            <li><a href="recipes/slowcooker_pork.html">SlowCooker Pork</a></li>
         </ul>
     </body>
 </html>
