Update slowcooker_pork.html and spanish_rice.html
Add image, description, ingredients and steps to slowcooker_pork.html

Update formatting on spanish_rice.html, no impact

--- a/recipes/slowcooker_pork.html
+++ b/recipes/slowcooker_pork.html
@@ -6,6 +6,32 @@
     </head>
 
     <body>
-        
+        <h1>SlowCooker Pork</h1>
+        <img src="../images/slowcookerpork.jpg" atf="Deliciuos low coooked pork">
+
+        <h2>SlowCooker Pork</h2>
+        <p>Easy and delicious slow cooker pork. Just make sure you 
+            start it around 7 hours before mealtime. Sourced from 
+            <a href="https://www.yourhomebasedmom.com/crockpot-pork-roast-only-five-ingredients/">yourhomebasedmom.com</a>
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 large sweet onions (sliced)</li>
+            <li>5 lbs pork shoulder roast</li>
+            <li>2 tbsp garlic & herb seasoning mix</li>
+            <li>1 tsp salt</li>
+            <li>2 cups chicken broth</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Grease a 6qt slow cooker with cooking oil</li>
+            <li>Place onions in bottom of slow cooker</li>
+            <li>Rub pork with seasonings</li>
+            <li>Place pork on top of onions</li>
+            <li>Pour broth over roast</li>
+            <li>Cover and cook on low for 9-10 hours or on high for 6-7 hours. Meat should pull apart easily with a fork</li>
+        </ol>
     </body>
 </html>
