--- a/recipes/spanish_rice.html
+++ b/recipes/spanish_rice.html
@@ -13,7 +13,8 @@
         <p>Spanish rice, also known as Mexican rice, can be a bit difficult 
             to get right. With this instant pot recipe, it comes out 
             perfect every time with minimal effort. Sourced 
-            from <a href="https://amindfullmom.com/instant-pot-spanish-rice/">amindfullmom.com</a> </p>
+            from <a href="https://amindfullmom.com/instant-pot-spanish-rice/">amindfullmom.com</a> 
+        </p>
         
         <h3>Ingredients</h3>
         <ul>
